# cfxdnn

./: CMakeLists.txt  Makefile  README.md  main.cc  net_utils.cc
cmake/Modules/: FindMKLRT.cmake
includes/: avg_pool_layer.h  cfxdnn.h  conversion.h  convolution_layer.h  data_layer.h  fully_connected_layer.h  initializer.h  layer.h  max_pool_layer.h  net_component.h  net_components.h  objective.h  optimizer.h  padder.h  primitive.h  relu_layer.h  sequential_network.h  sgd.h  softmax_objective.h  stopwatch.h
src/: avg_pool_layer.cc  conversion.cc  convolution_layer.cc  data_layer.cc  fully_connected_layer.cc  initializer.cc  max_pool_layer.cc  padder.cc  primitive.cc  relu_layer.cc  sequential_network.cc  sgd.cc  softmax_objective.cc  stopwatch.cc
